--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -47,12 +47,29 @@
     top: 0;
     left: 0;
     min-width: 300px;
-    width: 100%;
+    width: auto;
+    height: 100%;
     transform: translateX(-100%);
     z-index: 100;
+    background: var(--tg-theme-bg-color);
+    padding: 20px 15px;
+    display: flex;
+    flex-direction: column;
     transition: transform .4s ease-out;
 }
 
 .mobile_menu__opened {
     transform: translateX(0);
+}
+
+.mobile_menu__title {}
+
+.mobile_menu__closed {
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 40px;
+    height: 40px;
+    margin-bottom: 0 !important;
 }
