Change app bg on frontend; Add telegram client, change telegram service on back end

--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -1,3 +1,7 @@
+.header {
+
+}
+
 .header_wrapper {
     display: flex;
     align-items: center;
@@ -43,6 +47,7 @@
     width: auto;
     height: -webkit-fill-available;
     transform: translateX(-100%);
+    border-right: 1px solid var(--tg-theme-secondary-bg-color);
     z-index: 100;
     background: var(--tgui--bg_color);
     display: flex;
