--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 body {
-  background: var(--tg-theme-secondary-bg-color, white);
-  padding: 0;
-  margin: 0;
+    background: var(--tg-theme-bg-color);
+    padding: 0;
+    margin: 0;
 }
 
 .p-10 {
